arm64: configs: lineageos_nx618j_defconfig: Although we don't know which device nx618j is,enable it

--- a/arch/arm64/configs/lineageos_nx618j_defconfig
+++ b/arch/arm64/configs/lineageos_nx618j_defconfig
@@ -721,4 +721,4 @@ CONFIG_F2FS_FS=y
 # CONFIG_MACH_NUBIA_NX608J is not set
 # CONFIG_MACH_NUBIA_NX612J is not set
 # CONFIG_MACH_NUBIA_NX617J is not set
-# CONFIG_MACH_NUBIA_NX618J=y
+CONFIG_MACH_NUBIA_NX618J=y
